Persistent search setting + directory dropdown cut off bug

--- a/web/model-manager.css
+++ b/web/model-manager.css
@@ -279,7 +279,7 @@
 
 .model-manager .comfy-tabs-body > div {
     position: relative;
-    max-height: 100%;
+    height: 100%;
     padding: 0 16px;
     overflow-x: auto;
 }
